[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PullWave.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PullWaveSprite.gd" type="Script" id=2]

[sub_resource type="Gradient" id=3]
interpolation_mode = 2
offsets = PoolRealArray( 0.745645, 0.756098, 0.783972, 1 )
colors = PoolColorArray( 0, 0.466667, 1, 0, 0, 0.466667, 1, 1, 0, 0.466667, 1, 0.271429, 0, 0.466667, 1, 0 )

[sub_resource type="GradientTexture2D" id=4]
flags = 5
gradient = SubResource( 3 )
width = 150
height = 150
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.5, 1 )

[node name="PullWave" type="Node2D"]
scale = Vector2( 1.15, 1.15 )
script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
scale = Vector2( 1.32929, 1.32929 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite7" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite8" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Sprite9" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = SubResource( 4 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
